continuous_analytics/4_build/kaniko.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kaniko
spec:
  container:
  - name: build-image
    image: gcr.io/kaniko-project/executor:latest
    args: ["--dockerfile=Dockerfile",
          "--context=/workspace/examples/continuous_analytics/4_build",   # ADD PATH
          "--destination=registry.demo.scaleout.se/serve:latest"]   # ADD REPO
    volumeMounts:
    - name: workspace
      mountPath: etc/workspace
    - name: git-source
      mountPath: /workspace
  volumes:
  - name: git-source
    emptyDir: {}
  - name: workspace
  #- name: git-secret
  #  secret:
  #    secretName: git-creds
  #    defaultMode: 288
  securityContext:
      fsGroup: 65533 #make SSH key readable
    #volumeMounts:
    #  - name: kaniko-secret
    #    mountPath: /secret
    #env:
    #  - name: GOOGLE_APPLICATION_CREDENTIALS
    #    value: /secret/kaniko-secret.json
  restartPolicy: Never
  #volumes:
    #- name: kaniko-secret
      #secret:
      #  secretName: kaniko-secret
