continuous_analytics/4_build/build-gateway.yaml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: build-gateway
  labels:
    # gateway controller with instanceId "argo-events" will process this gateway
    gateways.argoproj.io/gateway-controller-instanceid: argo-events
    # gateway controller will use this label to match with it's own version
    # do not remove
    argo-events-gateway-version: v0.10
spec:
  processorPort: "9330"
  eventProtocol:
    type: "HTTP"
    http:
      port: "9300"
  template:
    metadata:
      name: "build-gateway"
      labels:
        gateway-name: "build-gateway"
    spec:
      containers:
        - name: "build-client"
          image: "argoproj/gateway-client"
          imagePullPolicy: "Always"
          command: ["/bin/gateway-client"]
        - name: "build-events"
          image: "argoproj/artifact-gateway"
          imagePullPolicy: "Always"
          command: ["/bin/artifact-gateway"]
      serviceAccountName: "argo-events-sa"
  eventSource: "build-event-source"
  eventVersion: "1.0"
  type: "artifact"
  watchers:
    sensors:
      - name: "build-sensor"
